<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_reviews"
        android:title="@string/ratings_title"
        android:icon="@android:drawable/ic_menu_edit"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_favorites_map"
        android:title="@string/map_create_button"
        android:icon="@android:drawable/ic_menu_mapmode"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_create_business"
        android:title="@string/business_title"
        android:icon="@android:drawable/ic_menu_manage"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_profile"
        android:title="@string/menu_profile"
        android:icon="@drawable/ic_profile_person"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_notifications"
        android:title="@string/notifications_title"
        android:icon="@android:drawable/ic_dialog_info"
        app:showAsAction="never" />
</menu>
